# ludivra

./: .gitignore  AGENTS.md  BACKLOG.md  CAPABILITIES.json  CMakeLists.txt  CMakePresets.json  DECISIONS.md  LICENSE  README.md  README.pt-BR.md  ROADMAP.md  SESSION_REPORT.md  THIRD_PARTY_NOTICES.md  architecture.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
capabilities/feedback-audio-effects/: capability.json
capabilities/host-electron-steam/: capability.json
capabilities/operability-control-harness/: capability.json
capabilities/presentation-three/: capability.json
capabilities/proof-card-roguelite-loop/: capability.json
capabilities/runtime-content-binding/: capability.json
capabilities/runtime-lua/: capability.json
capabilities/runtime-save-replay/: capability.json
cli/: package.json  tsconfig.json
cli/src/: arguments.ts  artifact-hash.ts  contract-validator.ts  control-client.ts  control-worker.ts  index.ts  process-runner.ts  project-state.ts  project.ts  repository-state.ts  repository.ts  result.ts  run-manifest.ts  scenario-harness.ts
cli/test/: cli.test.mjs
cmake/: Lua.cmake
contracts/: capability-catalog.schema.json  capability-catalog.source.json  capability-manifest.schema.json  cli-result.schema.json  control-protocol.schema.json  desktop-host.schema.json  presentation-events.schema.json  project-state.schema.json  run-manifest.schema.json
docs/adr/: 0001-build-system.md  0002-runtime-c-abi.md  0003-mit-license.md  0004-lua-sandbox.md  0005-first-steam-delivery.md  0006-desktop-commercial-host.md  0007-semantic-audio-and-effects.md  0008-mandatory-scale-and-procedural-capabilities.md  0009-canonical-state-and-run-evidence.md  0010-local-control-protocol-and-scenario-harness.md  0011-card-roguelite-content-and-authority.md  0012-feature-first-roadmap-and-proof-games.md  0013-development-runner-cache-and-lifecycle.md  0014-declarative-ui-contracts-and-initial-renderer.md  0015-raster-capture-and-visual-baselines.md  0016-public-lua-sdk-layers-and-escape-hatches.md  0017-content-pack-compilation-and-migrations.md  0018-numeric-determinism-and-rng-streams.md  0019-spatial-model-chunk-lifecycle-and-job-commit.md  0020-presentation-buffers-and-wasm-memory.md  0021-motion-and-physics-adapter-authority.md  0022-mass-runtime-storage-levels-and-budgets.md  0023-world-persistence-and-region-storage.md  0024-player-hosted-multiplayer-and-protocol-compatibility.md  0025-audio-backends-voice-budgets-and-fallback.md  0026-construction-graph-as-source-of-truth.md  0027-forge-output-contract-and-authoring-boundary.md  0028-diagnose-repair-verify-and-repair-classes.md  0029-benchmark-registry-profiles-and-baselines.md  0030-target-hardening-signing-and-distribution.md  0031-native-diagnostic-host-trigger-and-criteria.md
docs/guardrails/: change-gates.md  engineering-rules.md  token-efficiency.md
docs/recipes/: audio-and-effects.md  desktop-steam-release.md  scenario-harness.md
examples/card-roguelite/: .gitignore  AGENTS.md  BACKLOG.md  DECISIONS.md  (+2 more)
kernel/: CMakeLists.txt
kernel/src/: command_buffer.cpp  command_buffer.hpp  lua_sandbox.cpp  lua_sandbox.hpp  runtime.cpp  runtime.hpp  state_archive.cpp  state_archive.hpp
platform-contracts/: package.json  tsconfig.json
presentation-protocol/: package.json
renderer-three/: package.json
runtime-c-api/: CMakeLists.txt
runtime-c-api/include/ludivra/: presentation_events.h  runtime.h
runtime-c-api/src/: runtime_c_api.cpp
runtime-wasm/: CMakeLists.txt
runtime-wasm/src/: anchor.c
runtime-web/: package.json  tsconfig.json
schemas/: card-roguelite.schema.json  game.schema.json  scenario.schema.json
tests/runtime/: CMakeLists.txt  runtime_test.cpp
(+67 files in other folders)
